# OrbitalEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HOWTOCONTRIBUTE.md  README.md  generator.py  justfile  map_generator.py  package-lock.cmake
.github/: pull_request_template.md
.github/workflows/: ci.yml
common/include/components/: acceleration.hpp  mass.hpp  position.hpp  velocity.hpp
core/: CMakeLists.txt  main.cpp
physics/: CMakeLists.txt
scenes/: benchmark_1000.json  simulation_1.json  solar_systems.json
ui/: CMakeLists.txt  UIEngine.cpp
